--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ appcompat = "1.7.1"
 material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
+room ="2.6.1"
+kotlinx-coroutines = "1.7.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,8 +35,16 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
+room-runtime = {module = "androidx.room:room-runtime",version.ref="room"}
+room-compile={module = "androidx.room:room-compiler",version.ref="room"}
+room-ktx = {module="androidx.room:room-ktx",version.ref="room"}
+
+kotlinx-coroutines-core= {module = "org.jetbrains.kotlinx:kotlinx-coroutines-core",version.ref="kotlinx-coroutines"}
+kotlinx-coroutines-android= {module = "org.jetbrains.kotlinx:kotlinx-coroutines-android",version.ref="kotlinx-coroutines"}
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinx-kapt = {id="org.jetbrains.kotlin.kapt",version.ref="kotlin"}
 
